<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waehle_thema"
        android:textSize="24sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigation"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btnSchifffahrtsrecht"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schifffahrtsrecht"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btnWetterkunde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wetterkunde"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btnSeemannschaft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seemannschaft"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zuruck"
        android:layout_margin="8dp" />

</LinearLayout>