<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <Button
        android:id="@+id/btnLernen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lernen"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btnStatistik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistik"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_weiterempfehlen"
        android:layout_margin="8dp" />

</LinearLayout>